--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "grab",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "kong",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "express-handlebars": "^5.1.0"
-  }
+    "name": "grab",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node index.js"
+
+    },
+    "author": "kong",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.1",
+        "express-handlebars": "^5.1.0"
+    },
+    "engines": {
+        "node": "v12.18.0",
+        "npm": "6.14.4"
+    }
+
 }
